header contact name color issue fixed -header menu alignment changes

--- a/common.css
+++ b/common.css
@@ -58,13 +58,13 @@
   width: 80%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .topbar .container .nav-items .item-container {
   cursor: pointer;
   position: relative;
-  min-width: 10%;
+  /* min-width: 10%; */
   height: 100%;
   display: flex;
   align-items: center;
@@ -75,6 +75,8 @@
   text-align: center;
   color: #fff;
   width: 100%;
+  /* width: 157px; */
+
   font-size: 16px !important;
   padding: 0 25px;
   font-weight: bolder !important;
@@ -1036,7 +1038,7 @@ border: solid 1px #0FAFB4;
   position: absolute;
   /* left: 65px; */
   font-size: 22px !important;
-  top: 23.7vh;
+  top: 23vh;
   padding: 2px 0px 0px 13px;
 
 }
@@ -1045,7 +1047,7 @@ border: solid 1px #0FAFB4;
   position: absolute;
   /* left: 65px; */
   font-size: 22px !important;
-  top: 23.7vh;
+  top: 23vh;
   padding: 2px 0px 0px 13px;
 
 }
@@ -1054,7 +1056,7 @@ border: solid 1px #0FAFB4;
   position: absolute;
   /* left: 65px; */
   font-size: 22px !important;
-  top: 32vh;
+  top: 30.9vh;
   padding: 2px 0px 0px 13px;
 
 }
@@ -1063,7 +1065,7 @@ border: solid 1px #0FAFB4;
   position: absolute;
   /* left: 65px; */
   font-size: 22px !important;
-  top: 32vh;
+  top: 30.9vh;
   padding: 2px 0px 0px 13px;
 
 }
